# System_TX2

./: README.md  system_cfg.json
FTPclient/: CMakeLists.txt  demo.cpp  main.c
FTPclient/src/: FTPcfg.cpp  FTPcfg.h  THFTPAPI.c  THFTPAPI.h  bcflag.cpp  bcflag.h  rjson.cpp  rjson.h
System/json/: fileaddrs.json  keyvalue.json  system_cfg.json
System/log/: log
http-server/: CMakeLists.txt  main.cpp  main.h
http-server/src/: bcflag.cpp  bcflag.h  cfg.cpp  cfg.h
